[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
ordered-float = "*"
cached = { version = "*", default-features = false, features = ["proc_macro"] }
num-traits = "*"
lazy_static = "*"
